blackjack-test/blackjack-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-blackjack
  namespace: blackjack
  annotations:
    # annotations for keel to update the image
    keel.sh/policy: "all"
    keel.sh/trigger: "poll"
    keel.sh/pollSchedule: "@every 3m"
spec:
  selector:
    matchLabels:
      app: blackjack
  replicas: 1
  template:
    metadata:
      labels:
        app: blackjack
    spec:
      containers:
      - name: blackjack
        image: shlomobarzili/blackjack:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
