blackjack-test/blackjack-ingress.yml
# for working with alb type application you need to install helm and install the ingress controller aws.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-blackjack
  namespace: blackjack
  annotations:
    kubernetes.io/ingress.class: alb # the type alb 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/security-groups: sg-01d7ebc713e620d15
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:148088962203:certificate/2aa1e428-d743-4c3e-9bc3-3ddcf3dea349
    alb.ingress.kubernetes.io/subnets: subnet-0764be80679c91a76,subnet-0d4b2171b86249026
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]' # listen ports
    alb.ingress.kubernetes.io/actions.ssl-redirect: > # redirect to https
      {"type": "redirect", "redirectConfig": { "protocol": "HTTPS", "port": "443", "statusCode": "HTTP_301"}}
   # alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:us-east-1:148088962203:regional/webacl/blackjack-waf/6583d044-16e4-4b0c-99fb-20864ea5b1f8
                                            
spec:
  ingressClassName: alb
  rules:
    - host: blackjack.spider-shlomo.com
    - http:
        paths:
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect # the name of the service
                port:
                  name: use-annotation # use the annotation

          - path: /
            pathType: Exact # allow only access to application
            backend:
              service:
                name: ssl-redirect # the name of the service
                port:
                  name: use-annotation # use the annotation    

          - path: /presentation
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect # the name of the service
                port:
                  name: use-annotation # use the annotation          

          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: svc-blackjack
                port:
                  number: 80

          - path: /presentation
            pathType: Prefix
            backend:
              service:
                name: svc-blackjack
                port:
                  number: 80
                  
          - path: /
            pathType: Exact # allow only access to application
            backend:
              service:
                name: svc-blackjack
                port:
                  number: 80
